--- a/resturant/templates/resturant/news_list.html
+++ b/resturant/templates/resturant/news_list.html
@@ -1,3 +1,7 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head> <title>Swedish Dishes</title></head>
 {% extends "resturant/base.html" %} 
 
 {% block title %}News list{% endblock %}
