--- a/resturant/templates/resturant/index.html
+++ b/resturant/templates/resturant/index.html
@@ -61,7 +61,7 @@
         <h1 class="news-header">News!</h1>
         <hr>
 
-        <h2>Nyhetslista</h2>
+        <h2 style="text-align: center;">News List</h2>
 
         {% for news in news_list %}
         <div class="news-item">
