Prep for deploy

--- a/resturant/templates/resturant/my_bookings.html
+++ b/resturant/templates/resturant/my_bookings.html
@@ -33,7 +33,7 @@
 </div>
 
 <!-- Bootstrap Modal Structure -->
-<div class="modal fade" id="bookingmodal" tabindex="-1" aria-labelledby="bookingModalLabel" aria-hidden="true">
+<div class="modal fade" id="bookingModal" tabindex="-1" aria-labelledby="bookingModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered custom-modal-position">
         <div class="modal-content">
             <div class="modal-header">
